# gst-wrapper

./: meson.build  meson_options.txt  test.py
wrapper/: gst.vapi  gstgtkvideosinkwrapper.vala  gtk3-wayland.vapi  meson.build
wrapper/vapi/: gstreamer-wayland-1.0.vapi
